# mcp-chess-stats

./: README.md  main.py  pyproject.toml
src/chess/: server.py
